[bugfix] Addresses review suggestions